5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4129/executions/1674_1102.log
== TEST (2019-04-30 11:46:04) 
-- CODE:
H = float(input("Altura do tanque: "))
h = float(input("nivel de combustivel: "))
r = float(input("raio: ")
			 
if(H < 0 or h < 0 or r < 0):
	print("Entradas:",H,',',h,',',r)
	print("Entradas invalidas")
-- ERROR:
File "XXXX", line 5
    if(H < 0 or h < 0 or r < 0):
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:46:34) 
-- CODE:
H = float(input("Altura do tanque: "))
h = float(input("nivel de combustivel: "))
r = float(input("raio: ")
			 
if((H < 0) or (h < 0) or (r < 0)):
	print("Entradas:",H,',',h,',',r)
	print("Entradas invalidas")
-- ERROR:
File "XXXX", line 5
    if((H < 0) or (h < 0) or (r < 0)):
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:46:47) 
-- CODE:
H = float(input("Altura do tanque: "))
h = float(input("nivel de combustivel: "))
r = float(input("raio: ")
			 
if((H < 0) or (h < 0) or (r < 0))
	print("Entradas:",H,',',h,',',r)
	print("Entradas invalidas")
-- ERROR:
File "XXXX", line 6
    print("Entradas:",H,',',h,',',r)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:47:09) 
-- CODE:
H = float(input("Altura do tanque: "))
h = float(input("nivel de combustivel: "))
r = float(input("raio: ")
			 
if((H < 0) or (h < 0) or (r < 0)):
	 print("Entradas:",H,',',h,',',r)
	 print("Entradas invalidas")
-- ERROR:
File "XXXX", line 5
    if((H < 0) or (h < 0) or (r < 0)):
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:47:19) 
-- CODE:
H = float(input("Altura do tanque: "))
h = float(input("nivel de combustivel: "))
r = float(input("raio: ")
			 
if((H < 0) or (h < 0) or (r < 0)):
-- ERROR:
File "XXXX", line 5
    if((H < 0) or (h < 0) or (r < 0)):
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:47:25) 
-- CODE:
H = float(input("Altura do tanque: "))
h = float(input("nivel de combustivel: "))
r = float(input("raio: ")
			 
if((H < 0) or (h < 0) or (r < 0))
-- ERROR:
File "XXXX", line 6
    
                                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:47:41) 
-- CODE:
H = float(input("Altura do tanque: "))
h = float(input("nivel de combustivel: "))
r = float(input("raio: "))
			 
if((H < 0) or (h < 0) or (r < 0)):
	print("Entradas:",H,',',h,',',r)
	print("Entradas invalidas")
			 
			 
			 
-- ERROR:
File "XXXX", line 6
    
                                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:49:40) 
-- CODE:
H = float(input("Altura do tanque: "))
h = float(input("nivel de combustivel: "))
r = float(input("raio: "))
			 
if((H < 0) or (h < 0) or (r < 0) or H < h or H < 2*r):
	print("Entradas:",H,',',h,',',r)
	print("Entradas invalidas")
elif
			 
			 
			 
-- ERROR:
File "XXXX", line 8
    elif
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:49:43) 
-- CODE:
H = float(input("Altura do tanque: "))
h = float(input("nivel de combustivel: "))
r = float(input("raio: "))
			 
if((H < 0) or (h < 0) or (r < 0) or H < h or H < 2*r):
	print("Entradas:",H,',',h,',',r)
	print("Entradas invalidas")

			 
			 
			 
-- ERROR:
File "XXXX", line 8
    elif
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
